--- a/ProyectoWEB/client/src/componentes/menu.css
+++ b/ProyectoWEB/client/src/componentes/menu.css
@@ -9,28 +9,110 @@ header{
     padding: 0.3rem 0.2rem;
 }
 
-.Menu {
-    margin: 3rem 0rem 0rem 1rem;
-    font-family: 'Times New Roman', Times, serif;
-    list-style-type: none;
-    padding-left: 0;
+#menu {
+	background: #000000;
+	color: #FFF;
+	height: 53px;
+	padding-left: 18px;
+	border-radius: 0px;
+}
+#menu ul, #menu li {
+	margin: 0 auto;
+	padding: 0;
+	list-style: none
+}
+#menu ul {
+	width: 100%;
+}
+#menu li {
+	float: left;
+	display: inline;
+	position: relative;
+}
+#menu a {
+	display: block;
+	line-height: 53px;
+	padding: 0 14px;
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 16px;
 }
 
-#Logo{
-    font-size: 3rem;
-    text-align: center;
-    display: inline;
+#LOGO {
+	display: block;
+	line-height: 53px;
+	padding: 0 20px;
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 16px;
 }
 
-.Lista{
-    margin: 2em 2em 3em 2em;;
-    font-size: 2rem;
-    text-align: center;
-    display: inline;
+#menu a.dropdown-arrow:after {
+	content: "\25BE";
+	margin-left: 5px;
 }
-
-
-a:hover{
-    background-color: gray;
+#menu li a:hover {
+	color: #000000;
+	background: #F2F2F2;
+}
+#menu input {
+	display: none;
+	margin: 0;
+	padding: 0;
+	height: 53px;
+	width: 100%;
+	opacity: 0;
+	cursor: pointer
+}
+#menu label {
+	display: none;
+	line-height: 53px;
+	text-align: center;
+	position: absolute;
+	left: 35px
+}
+#menu label:before {
+	font-size: 1.6em;
+	content: "\2261"; 
+	margin-left: 20px;
+}
+#menu ul.sub-menus{
+	height: auto;
+	overflow: hidden;
+	width: 170px;
+	background: #444444;
+	position: absolute;
+	z-index: 99;
+	display: none;
+}
+#menu ul.sub-menus li {
+	display: block;
+	width: 100%;
+}
+#menu ul.sub-menus a {
+	color: #FFFFFF;
+	font-size: 16px;
+}
+#menu li:hover ul.sub-menus {
+	display: block
+}
+#menu ul.sub-menus a:hover{
+	background: #000000;
+	color: #011044;
+}
+@media screen and (max-width: 800px){
+	#menu {position:relative}
+	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
+	#menu ul.sub-menus {width:100%;position:static;}
+	#menu ul.sub-menus a {padding-left:30px;}
+	#menu li {display:block;float:none;width:auto;}
+	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
+	#menu input {z-index:4}
+	#menu input:checked + label {color:white}
+	#menu input:checked + label:before {content:"\00d7"}
+	#menu input:checked ~ ul {display:block}
+}
+.lOGO{
+    left: 75%;
 }
 
