--- a/ProyectoWEB/client/src/componentes/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register.css
@@ -1,5 +1,50 @@
+form{
+    border-radius: 24px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0);
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
 
+form input[type = "text"], form input[type = "password"], form input[type = "email"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid white;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+}
 
+form input[type = "text"]:focus, form input[type = "password"]:focus, form input[type = "email"]:focus{
+    width: 270px;
 
+}
+
+button {
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
 
 
