--- a/ProyectoWEB/client/src/componentes/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register.css
@@ -1,7 +1,8 @@
 form{
+    margin: 50px;
     border-radius: 24px;
     padding: 40px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
