--- a/ProyectoWEB/client/src/pages/SobreNosotros/sobrePage.css
+++ b/ProyectoWEB/client/src/pages/SobreNosotros/sobrePage.css
@@ -1,10 +1,86 @@
+.header
 
 #TextoSobre{
 	text-align: center;
 }
 
-.Parrafo{
+#TextoSobre {
+    margin: 1;
+    background-color: orange;
+}
+
+div h1{
 	text-align: center;
 	font-family: 'Times New Roman', Times, serif;
-	font-size: 2rem;
+	font-size: 3rem;
+	transition: box-shadow 0.3s ease;
+	margin: 1rem 0;
+    border-radius: 1rem;
+    padding: 0.5rem;
+}
+
+.sobre {
+    margin: 0 auto;
+}
+
+div section {
+    transition: box-shadow 0.3s ease;
+    background-color: #efefef;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0;
+}
+div section:hover {
+    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
+}
+
+div section h1, div section p {
+    margin: 1rem;
+}
+
+footer {
+    background-color: #000;
+    padding: 3rem;
+    color: white;
+}
+
+footer section {
+    float: right;
+	background-color: #000;
+}
+
+footer{
+    margin: 0;
+}
+
+footer a{
+    transition: color 0.3 ease;
+    color:white;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: cornflowerblue;
+}
+
+.inicio {
+	border: 3px white solid;
+	border-style: solid;
+	border-color: orange;
+	margin: 10px;
+	border-radius: 10px;
+	border-width: 1px;
+}
+
+.correo{
+	border: 3px white solid;
+	border-style: solid;
+	border-color: orange;
+	margin: 10px;
+	border-radius: 10px;
+	border-width: 1px;
+}
+
+#position {
+    position:relative ;
 }
