--- a/ProyectoWEB/client/src/pages/Carta/CartaPage.css
+++ b/ProyectoWEB/client/src/pages/Carta/CartaPage.css
@@ -52,7 +52,13 @@
     padding: 10px 15px 5px 250px;
 }
 
-
+#foot {
+    padding: 0em 0;
+    text-align: justify;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 
 
 
