--- a/ProyectoWEB/client/src/pages/InicioPage/IndexPage.css
+++ b/ProyectoWEB/client/src/pages/InicioPage/IndexPage.css
@@ -1,10 +1,17 @@
 #TextoOfertas{
     font-size: 2rem;
-    font-family: 'Times New Roman', Times, serif;
     text-align: center;
 }
 
 
 #ImagenEntre{
+    width: 100%;
+}
+
+#foot {
+    padding: 0em 0;
+    text-align: justify;
+    position: absolute;
+    bottom: 0;
     width: 100%;
 }
