--- a/ProyectoWEB/client/src/componentes/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register.css
@@ -1,4 +1,4 @@
-form{
+.FormRegister{
     margin: 50px;
     border-radius: 24px;
     padding: 40px;
@@ -12,7 +12,7 @@ form{
     font-size: 20px;
 }
 
-form input[type = "text"], form input[type = "password"], form input[type = "email"]{
+.FormRegister input[type = "text"], .FormRegister input[type = "password"], .FormRegister input[type = "email"]{
     border: 0;
     background: none;
     display: block;
@@ -27,7 +27,7 @@ form input[type = "text"], form input[type = "password"], form input[type = "ema
     transition: 0.25s;
 }
 
-form input[type = "text"]:focus, form input[type = "password"]:focus, form input[type = "email"]:focus{
+.FormRegister input[type = "text"]:focus, .FormRegister input[type = "password"]:focus, .FormRegister input[type = "email"]:focus{
     width: 270px;
 
 }
