--- a/ProyectoWEB/client/src/componentes/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register.css
@@ -1,5 +1,7 @@
 .FormRegister{
-    margin: 50px;
+    float: left;
+    margin: auto;
+    box-sizing: border-box  ;
     border-radius: 24px;
     padding: 40px;
     position: fixed;
@@ -29,12 +31,29 @@
     transition: 0.25s;
 }
 
-.FormRegister input[type = "text"]:focus, .FormRegister input[type = "password"]:focus, .FormRegister input[type = "email"]:focus{
-    width: 270px;
-
+.FormRegister input[type="date"]{
+    border: 0;
+    background: none;
+    color: white;
+    display: block;
+    margin: 30px 10px;
+    text-align: center;
+    border: 2px solid white;
+    padding: 14px 20px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
 }
 
-button {
+@media (max-width:480px){
+    .FormRegister{
+        width: 100%;
+    }
+}
+
+.boton {
     /* padding: 10px 10px; */
     font-size: 19px;
     font-family: Arapey;
@@ -48,9 +67,9 @@ button {
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-  }
+}
 
-.ContainerLogin{
+.ContainerRegister{
     width: 100%;
 }
 
@@ -58,6 +77,7 @@ button {
     position: relative;
     display: inline-block;
     width: 100%;
+    box-sizing: border-box;
     
 }    .select select {
         font-family: 'Arial';
