--- a/ProyectoWEB/client/src/componentes/Register/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register/Register.css
@@ -1,125 +1,109 @@
-.FormRegister{
-    float: left;
+.formulario_register{
+    width: 500px;
+    max-width: 100%;
     margin: auto;
-    box-sizing: border-box  ;
-    border-radius: 24px;
-    padding: 40px;
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(0, 0, 0);
+    margin-top: 100px;
+    margin-bottom: 10%;
+    padding: 20px;
+    box-shadow: 0 0 20px 1px rgba(0,0,0,0.3);
+    position: sticky;
+}
+
+.formulario_tituloRegister{
     text-align: center;
-    color: white;
-    font-size: 20px;
+    margin-top: 0;
+    color: rgba(0,0,0,0.7);
 }
 
-.FormRegister input[type = "text"], .FormRegister input[type = "password"], .FormRegister input[type = "email"]{
-    border: 0;
-    background: none;
-    display: block;
-    margin: 30px 10px;
-    text-align: center;
-    border: 2px solid white;
-    padding: 14px 20px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
+.formulario_input, .formulario_label{
+    display:  block;
+    width: 90%;
 }
 
-.FormRegister input[type="date"]{
-    border: 0;
-    background: none;
-    color: white;
-    display: block;
-    margin: 30px 10px;
-    text-align: center;
-    border: 2px solid white;
-    padding: 14px 20px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
+.formulario_input{
+    padding: 20px;
+    background: transparent;
+    border: 1px solid rgba(0,0,0,0.3);
+    margin-bottom: 40px;
 }
 
-@media (max-width:480px){
-    .FormRegister{
-        width: 100%;
-    }
-}
 
-.boton {
-    /* padding: 10px 10px; */
-    font-size: 19px;
-    font-family: Arapey;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
+.formulario_input:focus{
+    outline: 1px solid rgba(142, 140, 140, 0.5);
 }
-
-.ContainerRegister{
-    width: 100%;
-}
-
-.select {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    box-sizing: border-box;
-    
-}    .select select {
-        font-family: 'Arial';
-        display: inline-block;
-        width: 100%;
-        cursor: pointer;
-        margin-top: 35px;
-        padding: 9px 15px;
-        outline: 0;
-        border: 2.5px solid #ffffff;
-        border-radius: 30px;
-        background: #000000;
-        color: #ffffff;
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-    }
-        .select select::-ms-expand {
-            display: none;
-        }
-        .select select:hover,
-        .select select:focus {
-            color: #fffefe;
-            background: #474747;
-        }
-        .select select:disabled {
-            opacity: 0.5;
-            pointer-events: none;
-        }
-.select_arrow {
+#formulario_label{
+    padding-left: 15px;
     position: absolute;
-    bottom: 15px;
-    right: 27px;
-    pointer-events: none;
-    border-style: solid;
-    border-width: 8px 5px 0px 5px;
-    border-color: #ffffff transparent transparent transparent;
+    margin-top: -120px;
+    z-index: -20;
+    color: rgba(0, 0, 0, 1);
+    transition: all 0.2s;
 }
-.select select:hover ~ .select_arrow,
-.select select:focus ~ .select_arrow {
-    border-top-color: #000000;
+
+.select_formulario_input{
+    display:  block;
+    width: 492px;
+    padding: 20px;
+    background: transparent;
+    border: 1px solid rgba(0,0,0,0.3);
+    margin-bottom: 40px;
 }
-.select select:disabled ~ .select_arrow {
-    border-top-color: #474747;
+
+#formulario_label_nacimiento{
+    padding-left: 15px;
+    position: absolute;
+    margin-top: -120px;
+    z-index: -20;
+    color: rgba(0, 0, 0, 1);
 }
+
+.fijar{
+    margin-top: -120px;
+}
+
+.boton_registro {
+    height: 3em;
+    width: 8em;
+    border: none;
+    border-radius: 10em;
+    background: #000000;
+    font-size: 17px;
+    color: #ffffff;
+    font-weight: 500;
+   }
+   
+   .boton_registro:hover {
+    animation: shake3856 0.3s linear infinite both;
+   }
+   
+   @keyframes shake3856 {
+    0% {
+     -webkit-transform: translate(0);
+     transform: translate(0);
+    }
+   
+    20% {
+     -webkit-transform: translate(-2px, 2px);
+     transform: translate(-2px, 2px);
+    }
+   
+    40% {
+     -webkit-transform: translate(-2px, -2px);
+     transform: translate(-2px, -2px);
+    }
+   
+    60% {
+     -webkit-transform: translate(2px, 2px);
+     transform: translate(2px, 2px);
+    }
+   
+    80% {
+     -webkit-transform: translate(2px, -2px);
+     transform: translate(2px, -2px);
+    }
+   
+    100% {
+     -webkit-transform: translate(0);
+     transform: translate(0);
+    }
+   }
