--- a/ProyectoWEB/client/src/pages/Carta/CartaPage.css
+++ b/ProyectoWEB/client/src/pages/Carta/CartaPage.css
@@ -50,3 +50,19 @@
     padding: 10px 1px 5px 150px;
     flex-wrap: wrap;
 }
+
+.button{
+    /* padding: 10px 10px; */
+    font-size: 19px;
+    font-family: Arapey;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
