--- a/ProyectoWEB/client/src/componentes/Carro/Compras.css
+++ b/ProyectoWEB/client/src/componentes/Carro/Compras.css
@@ -1,8 +1,56 @@
 .ContainerCarro{
-    border: 2px;
-    border-color: black;
-    border-style: solid;
-    margin: 20px
-    
+    color: white;
+    margin: 20px;
+    position: relative;
+    background-color: rgb(0, 0, 0);
+    padding: 5em;
+    margin: 10px;
+    border-radius: 5em;
+}
 
+.carro p {
+    color: aliceblue;
+    font-size: x-large;
+}
+
+.carro h2{
+    color: aliceblue;
+    font-size: x-large;
+}
+
+.producto {
+    color: white;
+    font-size: x-large;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.total{
+    text-align: right;
+    color: white;
+}
+
+img {
+    border: 10ch;
+    border-radius: 5cm;
+}
+
+button {
+    align-self: right;
+}
+
+.containerproducto {
+    border: 2px;
+    border-color: rgb(88, 88, 88);
+    border-style: solid;
+    border-radius: 1em;
+    background-color: rgb(0, 0, 0);
+    margin: 50px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 00px;
+    margin: auto;
 }
