--- a/ProyectoWEB/client/src/componentes/Cart/ItemCart.css
+++ b/ProyectoWEB/client/src/componentes/Cart/ItemCart.css
@@ -1,3 +1,54 @@
-.imagenCarro{
-    width: 5rem;
+.ContainerCarro{
+    color: white;
+    margin: 20px;
+    position: relative;
+    background-color: rgb(0, 0, 0);
+    padding: 2em;
+    margin: 10px;
+    border-radius: 5em;
+}
+
+.carro p {
+    color: aliceblue;
+    font-size: x-large;
+}
+
+.carro h2{
+    color: aliceblue;
+    font-size: x-large;
+}
+
+.producto {
+    color: white;
+    font-size: x-large;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.total{
+    text-align: right;
+    color: white;
+}
+
+.imagenCarro {
+    border: 10ch;
+    border-radius: 5cm;
+}
+
+
+
+.containerproducto {
+    border: 2px;
+    border-color: rgb(88, 88, 88);
+    border-style: solid;
+    border-radius: 1em;
+    background-color: rgb(0, 0, 0);
+    margin: 50px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 00px;
+    margin: auto;
 }
